# customer-chat

./: .gitignore  README.md  pyproject.toml  wsgi.py
customer_chat/: __init__.py  auth.py  db.py  routes.py  schema.sql  socketio.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agent/chat/[chatId]/: page.tsx
frontend/app/agent/dashboard/: page.tsx
frontend/app/agent/login/: page.tsx
frontend/app/components/: ChatWindow.tsx
